--- a/src/.streamlit/config.toml
+++ b/src/.streamlit/config.toml
@@ -6,15 +6,12 @@ layout="wide"
 hideTopBar = true
 
 
+
 [server]
-# Enables support for Cross-Origin Resource Sharing (CORS) protection, for
-# added security.
-# Due to conflicts between CORS and XSRF, if `server.enableXsrfProtection` is
-# on and `server.enableCORS` is off at the same time, we will prioritize
-# `server.enableXsrfProtection`.
-# Default: true
-enableCORS = true
 browser.gatherUsageStats = false
+enableCORS = false  # Disable CORS since the proxy handles it
+enableXsrfProtection = true  # Secure requests if needed
+baseUrlPath = ""  # Adjust this if the app is served under a subpath
 
 # Enables support for Cross-Site Request Forgery (XSRF) protection, for added
 # security.
